--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- WeeChat v1.0
+# weechat.conf -- weechat v1.2-dev
 #
 
 [debug]
@@ -18,7 +18,7 @@ bar_more_left = "<<"
 bar_more_right = ">>"
 bar_more_up = "--"
 bare_display_exit_on_input = on
-bare_display_time_format = "%H:%M:%S"
+bare_display_time_format = "%H:%M"
 buffer_auto_renumber = on
 buffer_notify_default = all
 buffer_position = end
@@ -38,6 +38,7 @@ color_nick_offline = off
 color_pairs_auto_reset = 5
 color_real_white = off
 command_chars = ""
+command_incomplete = off
 confirm_quit = off
 day_change = on
 day_change_message_1date = "-- %a, %d %b %Y --"
@@ -67,6 +68,7 @@ input_share_overwrite = off
 input_undo_max = 32
 item_buffer_filter = "*"
 item_buffer_zoom = "!"
+item_mouse_status = "M"
 item_time_format = "%H:%M:%S"
 jump_current_to_previous_buffer = on
 jump_previous_buffer_when_closing = on
@@ -78,10 +80,10 @@ nick_prefix = ""
 nick_suffix = ""
 paste_bracketed = on
 paste_bracketed_timer_delay = 10
-paste_max_lines = 1
+paste_max_lines = 3
 prefix_action = " *"
 prefix_align = right
-prefix_align_max = 0
+prefix_align_max = 18
 prefix_align_min = 0
 prefix_align_more = "+"
 prefix_align_more_after = on
@@ -94,12 +96,12 @@ prefix_join = "-->"
 prefix_network = "--"
 prefix_quit = "<--"
 prefix_same_nick = ""
-prefix_suffix = "|"
+prefix_suffix = "│"
 read_marker = line
 read_marker_always_show = off
-read_marker_string = "- "
+read_marker_string = "—"
 save_config_on_exit = on
-save_layout_on_exit = none
+save_layout_on_exit = all
 scroll_amount = 3
 scroll_bottom_after_switch = off
 scroll_page_percent = 100
@@ -123,13 +125,13 @@ chat_buffer = white
 chat_channel = white
 chat_day_change = cyan
 chat_delimiters = green
-chat_highlight = yellow
+chat_highlight = white
 chat_highlight_bg = black
 chat_host = cyan
 chat_inactive_buffer = default
 chat_inactive_window = default
 chat_nick = lightcyan
-chat_nick_colors = "cyan,magenta,green,brown,lightblue,default,lightcyan,lightmagenta,lightgreen,14,27,28,29,32,33,34,35,36,37,38,39,40,41,42,45,46,47,48,49,50,41,52,59,68,69,70,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,164,165,178,177,178,179,180,192,193,194,195,214,215,220,221,224,225,226,227,229"
+chat_nick_colors = "cyan,green,brown,lightblue,lightcyan,lightmagenta,lightgreen,14,27,28,29,32,33,34,35,36,37,38,39,40,41,42,45,46,47,48,49,50,41,68,69,70,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,164,165,178,177,178,179,180,192,193,194,195,214,215,220,221,224,225,226,227,229"
 chat_nick_offline = default
 chat_nick_offline_highlight = default
 chat_nick_offline_highlight_bg = black
@@ -146,7 +148,7 @@ chat_prefix_more = lightmagenta
 chat_prefix_network = magenta
 chat_prefix_quit = lightred
 chat_prefix_suffix = green
-chat_read_marker = magenta
+chat_read_marker = green
 chat_read_marker_bg = default
 chat_server = brown
 chat_tags = red
@@ -173,6 +175,7 @@ status_data_other = default
 status_data_private = lightgreen
 status_filter = green
 status_more = yellow
+status_mouse = green
 status_name = white
 status_name_ssl = lightgreen
 status_nicklist_count = default
@@ -181,15 +184,16 @@ status_time = default
 
 [completion]
 base_word_until_cursor = on
+command_inline = on
 default_template = "%(nicks)|%(irc_channels)"
 nick_add_space = on
 nick_completer = ":"
 nick_first_only = off
-nick_ignore_chars = "[]`_-^"
-partial_completion_alert = on
+nick_ignore_chars = ""
+partial_completion_alert = off
 partial_completion_command = off
 partial_completion_command_arg = off
-partial_completion_count = on
+partial_completion_count = off
 partial_completion_other = off
 
 [history]
@@ -240,7 +244,7 @@ input.items = "[input_prompt]+(away),[input_search],[input_paste],input_text"
 input.position = bottom
 input.priority = 1000
 input.separator = off
-input.size = 1
+input.size = 0
 input.size_max = 0
 input.type = window
 isetbar.color_bg = default
@@ -269,7 +273,7 @@ nicklist.position = right
 nicklist.priority = 200
 nicklist.separator = on
 nicklist.size = 0
-nicklist.size_max = 0
+nicklist.size_max = 15
 nicklist.type = window
 status.color_bg = black
 status.color_delim = cyan
@@ -278,14 +282,14 @@ status.conditions = ""
 status.filling_left_right = vertical
 status.filling_top_bottom = horizontal
 status.hidden = off
-status.items = "time,[buffer_plugin],buffer_number+:+buffer_name+(buffer_modes),[buffer_nicklist_count],[buffer_last_number],[lag],[completion]"
+status.items = "time,[buffer_plugin],buffer_number+:+buffer_name+(buffer_modes),[buffer_nicklist_count],[buffer_last_number],[lag],[completion],[scroll]"
 status.position = bottom
 status.priority = 500
 status.separator = off
 status.size = 1
 status.size_max = 0
 status.type = window
-title.color_bg = blue
+title.color_bg = black
 title.color_delim = cyan
 title.color_fg = default
 title.conditions = ""
@@ -300,11 +304,13 @@ title.size = 1
 title.size_max = 0
 title.type = window
 
-[layout]
-
 [notify]
 
 [filter]
+esper_conn_snomask = on;*;notify_private;Client (exiting|connecting)
+esper_jupe_snomask_ramnode = on;*;notify_private;is attempting to join locally juped channel #ramnode
+esper_dnsbl_snomask = on;*;notify_private;Listed on DNSBL
+esper_kill_snomask = on;*;notify_private;Received KILL message.*(Nickname regained|GHOST command|Connection limit exceeded)
 
 [key]
 ctrl-? = "/input delete_previous_char"
@@ -324,7 +330,7 @@ ctrl-I = "/input complete_next"
 ctrl-J = "/input return"
 ctrl-K = "/input delete_end_of_line"
 ctrl-L = "/window refresh"
-ctrl-M = "/input return"
+ctrl-M = "/input magic_enter"
 ctrl-N = "/buffer +1"
 ctrl-P = "/buffer -1"
 ctrl-R = "/input search_text"
