--- a/mIRC/mirc.ini
+++ b/mIRC/mirc.ini
@@ -1,12 +1,12 @@
 [chanfolder]
-n0=#lobby
 
 [update]
 check=0
+next=1428334808
 
 [about]
 portable=no
-version=7.32
+version=7.41
 show=no
 
 [dirs]
@@ -41,14 +41,14 @@ n1=*.wav,*.mid,*.mp3,*.wma,*.oggEXTDIR:sounds\
 n0=scripts\aliases.ini
 
 [options]
-n0=0,1,0,1,0,0,300,0,0,1,1,0,0,0,0,0,1,0,0,0,4096,0,1,3,1,1,1,1,0,50,1,1,1,1,0
-n1=5,100,1,1,2642,11,33,2,5,1,0,1,1,1,0,0,1,1,0,0,0,1,1,0,5,0,0,0,0,0,1,0,0,0,1,10
-n2=0,0,0,1,1,1,0,1,0,60,120,0,0,1,0,0,0,0,0,120,20,10,0,1,0,1,1,1,0,1,1,1,0,0,1,2,1
-n3=5000,1,0,1,1,0,1,1,0,1,0,1,0,0,0,1,1,0,1,1,0,0,0,0,1,1,0,6,0,2,1,3,180,0,0,1,0
-n4=1,0,1,0,0,0,9999,0,0,1,1,1,1024,1,1,9999,60,0,1,0,1,1,1,1,0,5000,1,5,0,0,3,0,1,1,0,0,0
-n5=1,1,1,1,1,1,1,1,1,1,0,0,1,0,1,1,1,0,300,100,10,0,0,29,0,1,1,8192,0,0,0,115,0,1,0,1
+n0=0,1,0,1,0,0,300,0,0,0,1,0,0,0,2,0,1,2,0,0,4096,0,1,3,1,1,1,1,0,50,1,1,1,1,0
+n1=5,100,1,1,6591,36,58,2,5,1,0,1,0,1,0,0,1,1,1,0,0,1,1,0,5,0,0,0,0,0,1,0,0,0,1,10
+n2=0,0,0,1,0,1,0,1,0,60,120,0,0,1,0,0,0,0,0,120,20,10,0,1,0,1,1,1,0,1,1,1,0,0,1,2,0
+n3=5000,1,0,1,1,0,1,1,0,1,0,1,0,0,0,1,1,0,0,1,0,0,1,0,1,1,0,0,0,2,1,3,180,0,0,0,0
+n4=1,0,1,0,0,0,9999,0,0,1,1,1,1024,1,1,9999,60,0,1,0,1,1,1,4,0,5000,1,5,0,0,3,0,1,1,0,0,0
+n5=1,1,1,1,1,1,1,1,1,1,0,0,1,0,1,1,1,0,300,100,10,0,0,31,0,1,1,8192,0,0,0,115,0,1,0,1
 n6=0,0,0,1,1,1,1,1,1,1,0,0,0,0,1,1,0,1,1,0,0,0,2500,0,1,0,1,1,1,0,4,1,1,0,0,0
-n7=1,1,1,0,0,1,0,1,1,1,1,1,1,1,0,0,1,70,0,7,1,1,1,1,1,1,0,0,1,1,1,1,0,0,1,1,1
+n7=1,1,1,0,0,0,0,1,1,1,1,1,1,1,0,0,1,70,0,7,0,1,1,1,1,1,0,0,1,1,1,1,0,0,1,1,1
 n8=2,2,1,168,1,1,0,2,0,0,1,0,1,0,1,0,1,0,0,0,0,0,168,1,0,1,1,1,0,0,0,1,1,0,3,0,0
 
 [pfiles]
@@ -58,17 +58,6 @@ n2=scripts\popups.ini
 n3=scripts\popups.ini
 n4=scripts\popups.ini
 
-[rfiles]
-n0=scripts\users.ini
-n1=scripts\vars.ini
-n2=scripts\on connect - start.ini
-n3=scripts\highlighter.ini
-n4=scripts\kick-rejoin.ini
-n5=scripts\utilities.ini
-n6=scripts\Query Relay.ini
-n7=scripts\ircify.mrc
-n8=scripts\EsperNet.ini
-n9=scripts\WHOIS Modifier.ini
 
 [agent]
 enable=0,0
@@ -87,14 +76,14 @@ lastreset=
 aptitle=
 commandchar=/
 linesep=none
-finger=
-quit=Good day.
+finger=I have ten of them.
+quit=This night will fall like any other, daylight subsides and shadows crawl.
 timestamp=03(HH:nn:ss)
-logstamp=(HH:nn:ss | dd/mm/yyyy)
+logstamp=(HH:nn:ss | yyyy-mm-dd)
 accept=*.jpg,*.gif,*.png,*.bmp,*.txt,*.log,*.wav,*.mid,*.mp3,*.wma,*.ogg,*.zip
-ignore=*.exe,*.com,*.bat,*.dll,*.ini,*.mrc,*.vbs,*.js,*.pif,*.scr,*.lnk,*.pl,*.shs,*.htm,*.html,*.wmf
+ignore=*.ade,*.adp,*.app,*.asp,*.bas,*.bat,*.cer,*.chm,*.cmd,*.com,*.cpl,*.crl,*.crt,*.csh,*.der,*.dll,*.exe,*.fxp,*.gadget,*.hlp,*.hta,*.htm,*.html,*.inf,*.ini,*.ins,*.isp,*.its,*.js,*.jse,*.ksh,*.lib,*.lnk,*.mad,*.maf,*.mag,*.mam,*.maq,*.mar,*.mas,*.mat,*.mau,*.mav,*.maw,*.mda,*.mdb,*.mde,*.mdt,*.mdw,*.mdz,*.mht,*.mhtm,*.mhtml,*.mrc,*.msc,*.msh,*.msh1,*.msh1xml,*.msh2,*.msh2xml,*.mshxml,*.msi,*.msp,*.mst,*.ocx,*.ops,*.pcd,*.pif,*.plg,*.prf,*.prg,*.ps1,*.ps1xml,*.ps2,*.ps2xml,*.psc1,*.psc2,*.pst,*.reg,*.scf,*.scr,*.sct,*.shb,*.shs,*.sys,*.tmp,*.url,*.vb,*.vbe,*.vbs,*.vsmacros,*.vsw,*.vxd,*.website,*.ws,*.wsc,*.wsf,*.wsh,*.xnk
 theme=Monochrome State
-network=Sandbox
+network=EsperNet
 
 [files]
 servers=servers.ini
@@ -104,9 +93,9 @@ addrbk=addrbk.ini
 
 [mirc]
 user=Zarthus
-email=zarthus@zarth.us
+email=
 nick=Zarthus
-anick=Samantha
+anick=notZarthus
 
 [dde]
 ServerStatus=on
@@ -114,7 +103,7 @@ ServiceName=mIRC
 CheckName=off
 
 [ports]
-ustate=off
+ustate=on
 dcc=1
 other=0
 random=off
@@ -132,7 +121,6 @@ show=2
 cert=
 key=
 ca=
-mode=0
 
 [ident]
 active=yes
@@ -232,35 +220,22 @@ n4=,7,%,,0,0,0,0,0
 n5=*!*@*gateway/web/freenode/*,6,,,0,1,0,0,0
 n6=*!*Mibbit@*,6,+,,0,1,0,0,0
 n7=*!*webchat@*,6,+,,0,1,0,0,0
-n8=,3,+,,0,0,0,0,10
-n9=,9,+,,0,0,0,0,0
+n8=*!~EIRC_RR@*,14,,,0,1,0,0,0
+n9=*!~EiraIRC@*,14,,,0,1,0,0,0
+n10=,3,+,,0,0,0,0,10
+n11=,9,+,,0,0,0,0,0
 
 [highlight]
-
-[nicklist]
-
-[order]
-n0=#lobby
 
 [logext]
 n0=*.log
 
-[find]
-
-[replace]
-
-[find2]
-
 [wizard]
 warning=2
 
-[chanlist]
-
-[local]
-
 [fullscreen]
-normal=-1659,34,960,877,1,2,1,2,1,0,1,1
-full=-1659,34,960,877,1,2,1,1,0,0,0,0
+normal=-1915,4,798,558,1,2,1,2,1,0,1,1
+full=-1915,4,798,558,1,2,1,1,0,0,0,0
 state=normal
 
 [clearhistory]
@@ -275,12 +250,25 @@ windows=no
 ssls=no
 
 [logmatch]
+n0=code
+n1=sa-mp
 
 [notify]
 
-[logging]
-
 [tips]
+#mIRC=off
+
+[flashing]
+*highlight_attach=off
+
+[beeping]
+*highlight_attach=off
+
+[background]
+wchannel=none
+
+[events]
+#manvsgame=3,3,4,0,0,0,0,0
 
 [fonts]
 fstatus=Consolas,414,0,2,0,11
