--- a/.weechat/alias.conf
+++ b/.weechat/alias.conf
@@ -1,41 +1,43 @@
+
 #
-# alias.conf -- weechat v0.4.4-dev
+# alias.conf -- weechat v1.2-dev
 #
 
 [cmd]
 AAWAY = "allserv /away"
-alot = "/input insert http://hyperboleandahalf.blogspot.com/2010/04/alot-is-better-than-you-at-everything.html"
 AME = "allchan /me"
 AMSG = "allchan /msg *"
 ANICK = "allserv /nick"
 BEEP = "print -beep"
-bro = "/input insert ლ(°◡°ლ)"
 BYE = "quit"
 C = "buffer clear"
 CHAT = "dcc chat"
 CL = "buffer clear"
 CLOSE = "buffer close"
+cs = "msg ChanServ"
 EXIT = "quit"
+give = "input insert ༼ つ ◕_◕ ༽つ"
 IG = "ignore"
 J = "join"
 K = "kick"
 KB = "kickban"
-konamicode = "/input insert ↑ ↑ ↓ ↓ ← → ← → B A ((select) start)"
 LEAVE = "part"
-lookaround = "/input insert /me looks around ('-' ) (._. ) (o_o) ( ._.) ( '-')"
 M = "msg"
+MSGBUF = "command -buffer $1 * /input send $2-"
 MUB = "unban *"
 N = "names"
-onotice = "/input insert /opnotice [ops-only notice] $1-"
+ns = "msg NickServ"
+os = "msg OperServ"
 Q = "query"
 REDRAW = "window refresh"
 SAY = "msg *"
+shrug = "/input insert ¯\_(ツ)_/¯"
 SIGNOFF = "quit"
+ss = "/msg sessionserv"
 T = "topic"
 UB = "unban"
 UMODE = "mode $nick"
 V = "command core version"
-vonotice = "/input insert /vnotice [voice-only notice] $1-"
 W = "who"
 WC = "window merge"
 WI = "whois"
@@ -43,3 +45,4 @@ WII = "whois $1 $1"
 WW = "whowas"
 
 [completion]
+MSGBUF = "%(buffers_plugins_names)"
