--- a/.weechat/irc.conf
+++ b/.weechat/irc.conf
@@ -1,12 +1,14 @@
 #
-# irc.conf -- WeeChat v1.0
+# irc.conf -- weechat v1.2-dev
 #
 
 [look]
+buffer_open_before_autojoin = on
+buffer_open_before_join = off
 buffer_switch_autojoin = on
 buffer_switch_join = on
-color_nicks_in_names = off
-color_nicks_in_nicklist = off
+color_nicks_in_names = on
+color_nicks_in_nicklist = on
 color_nicks_in_server_messages = on
 color_pv_nick_like_channel = on
 ctcp_time_format = "%a, %d %b %Y %T %z"
@@ -52,12 +54,13 @@ pv_tags = "notify_private"
 raw_messages = 256
 server_buffer = merge_with_core
 smart_filter = on
-smart_filter_delay = 5
+smart_filter_delay = 300
 smart_filter_join = on
 smart_filter_join_unmask = 30
-smart_filter_mode = "+"
+smart_filter_mode = ""
 smart_filter_nick = on
 smart_filter_quit = on
+temporary_servers = off
 topic_strip_colors = off
 
 [color]
@@ -70,7 +73,7 @@ item_nick_modes = default
 message_join = green
 message_quit = red
 mirc_remap = "1,-1:darkgray"
-nick_prefixes = "q:lightred;a:lightcyan;o:lightgreen;h:lightmagenta;v:yellow;*:lightblue"
+nick_prefixes = "q:lightred;a:lightred;o:30;v:40;*:lightblue"
 notice = green
 reason_quit = default
 topic_new = white
@@ -80,12 +83,12 @@ topic_old = default
 alternate_nick = on
 autoreconnect_delay_growing = 2
 autoreconnect_delay_max = 600
-ban_mask_default = "*!$ident@$host"
+ban_mask_default = "*!*@$host"
 colors_receive = on
 colors_send = on
 lag_check = 60
 lag_max = 1800
-lag_min_show = 25
+lag_min_show = 1000
 lag_reconnect = 0
 lag_refresh_interval = 1
 notify_check_ison = 1
@@ -94,6 +97,11 @@ send_unknown_commands = off
 whois_double_nick = off
 
 [msgbuffer]
+305 = current
+901 = current
+kill = server
+wallops = current
+whois = current
 
 [ctcp]
 
@@ -111,7 +119,7 @@ autorejoin = off
 autorejoin_delay = 30
 away_check = 0
 away_check_max_nicks = 25
-capabilities = ""
+capabilities = "account-notify"
 command = ""
 command_delay = 0
 connection_timeout = 60
@@ -120,11 +128,13 @@ default_msg_part = "WeeChat %v"
 default_msg_quit = "WeeChat %v"
 ipv6 = on
 local_hostname = ""
-nicks = "zarthus,zarthus-vps,zarthus-"
+nicks = "Zarthus,Weethus"
 notify = ""
 password = ""
 proxy = ""
-realname = ""
+realname = "Zarthus"
+sasl_fail = continue
+sasl_key = ""
 sasl_mechanism = plain
 sasl_password = ""
 sasl_timeout = 15
@@ -138,30 +148,32 @@ ssl_verify = on
 username = "zarthus"
 
 [server]
-esper.addresses = "irc.esper.net/6697"
+esper.addresses = "ipv6.irc.esper.net/6697"
 esper.proxy
 esper.ipv6
 esper.ssl = on
-esper.ssl_cert
+esper.ssl_cert = "%h/ssl/esper.pem"
 esper.ssl_priorities
 esper.ssl_dhkey_size = 1024
 esper.ssl_fingerprint
 esper.ssl_verify = off
 esper.password
-esper.capabilities
-esper.sasl_mechanism = dh-blowfish
+esper.capabilities = ""
+esper.sasl_mechanism = plain
 esper.sasl_username = "Zarthus"
 esper.sasl_password = "${sec.data.esper}"
+esper.sasl_key
 esper.sasl_timeout = 20
+esper.sasl_fail
 esper.autoconnect = on
 esper.autoreconnect
 esper.autoreconnect_delay
-esper.nicks = "Weethus,zarthus,zarthus-vps,zarthus-"
+esper.nicks = "Weethus,zarthus,zarthus-"
 esper.username
-esper.realname = "Zarthus (Weechat)"
+esper.realname = "Zarthus"
 esper.local_hostname
 esper.command_delay
-esper.autojoin = "#zarthus,#lobby,#hi!,#esper,#coders,#help,#minecraft,#hearthstone,#kspofficial"
+esper.autojoin = "#zarthus,#lobby,#coders,#help,#minecraft,#hearthstone,#KSPOfficial,#drtshock"
 esper.autorejoin
 esper.autorejoin_delay
 esper.connection_timeout
@@ -177,26 +189,29 @@ freenode.addresses = "irc.freenode.net/6697"
 freenode.proxy
 freenode.ipv6
 freenode.ssl = on
-freenode.ssl_cert
+freenode.ssl_cert = "%h/ssl/freenode.pem"
 freenode.ssl_priorities
 freenode.ssl_dhkey_size = 1024
 freenode.ssl_fingerprint
 freenode.ssl_verify
-freenode.capabilities
-freenode.sasl_mechanism = dh-blowfish
+freenode.password
+freenode.capabilities = ""
+freenode.sasl_mechanism = plain
 freenode.sasl_username = "Zarthus"
 freenode.sasl_password = "${sec.data.freenode}"
+freenode.sasl_key
 freenode.sasl_timeout = 20
+freenode.sasl_fail
 freenode.autoconnect = on
 freenode.autoreconnect
 freenode.autoreconnect_delay
-freenode.nicks = "Weethus,zarthus,zarthus-vps,zarthus-"
+freenode.nicks = "Weethus,zarthus,zarthus-"
 freenode.username
-freenode.realname = "Zarthus (Weechat)"
+freenode.realname = "Zarthus"
 freenode.local_hostname
-freenode.command = "umode +w"
+freenode.command = "/umode +w"
 freenode.command_delay
-freenode.autojoin = "#freenode,#weechat,#znc,#web,#trivialand"
+freenode.autojoin = "#freenode,#weechat,##c++,#laravel,#ubuntu,#znc,#web,##English,##php,##java"
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
@@ -222,17 +237,19 @@ quakenet.capabilities
 quakenet.sasl_mechanism
 quakenet.sasl_username
 quakenet.sasl_password
+quakenet.sasl_key
 quakenet.sasl_timeout
+quakenet.sasl_fail
 quakenet.autoconnect = on
 quakenet.autoreconnect
 quakenet.autoreconnect_delay
 quakenet.nicks = "Weethus,zarthus,zarthus-vps,zarthus-"
 quakenet.username
-quakenet.realname = "Zarthus (Weechat)"
+quakenet.realname = "It's laughter and lovin' I disdain"
 quakenet.local_hostname
 quakenet.command = "/challengeauth BuuGhost ${sec.data.quakenet}; /umode +x"
 quakenet.command_delay
-quakenet.autojoin = "#hearthstone"
+quakenet.autojoin = "#hearthstone,#r/globaloffensive,#heroesofthestorm"
 quakenet.autorejoin
 quakenet.autorejoin_delay
 quakenet.connection_timeout
