--- a/.weechat/script.conf
+++ b/.weechat/script.conf
@@ -1,5 +1,6 @@
+
 #
-# script.conf -- WeeChat v1.0
+# script.conf -- weechat v1.2-dev
 #
 
 [look]
@@ -46,3 +47,4 @@ cache_expire = 1440
 dir = "%h/script"
 hold = ""
 url = "http://weechat.org/files/plugins.xml.gz"
+url_force_https = on
