--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -33,8 +33,8 @@ color_inactive_message = on
 color_inactive_prefix = on
 color_inactive_prefix_buffer = on
 color_inactive_time = off
-color_inactive_window = on
-color_nick_offline = off
+color_inactive_window = off
+color_nick_offline = on
 color_pairs_auto_reset = 5
 color_real_white = off
 command_chars = ""
@@ -45,7 +45,7 @@ day_change_message_1date = "-- %a, %d %b %Y --"
 day_change_message_2dates = "-- %%a, %%d %%b %%Y (%a, %d %b %Y) --"
 eat_newline_glitch = off
 emphasized_attributes = ""
-highlight = "Zarth*,BuuGhost,Weethus"
+highlight = "Elysia,Zarth*,BuuGhost,Weethus"
 highlight_regex = ""
 highlight_tags = ""
 hotlist_add_conditions = "${away} || ${buffer.num_displayed} == 0"
@@ -97,6 +97,9 @@ prefix_network = "--"
 prefix_quit = "<--"
 prefix_same_nick = ""
 prefix_suffix = "│"
+quote_nick_prefix = "<"
+quote_nick_suffix = ">"
+quote_time_format = "%H:%M:%S"
 read_marker = line
 read_marker_always_show = off
 read_marker_string = "—"
@@ -106,14 +109,16 @@ scroll_amount = 3
 scroll_bottom_after_switch = off
 scroll_page_percent = 100
 search_text_not_found_alert = on
-separator_horizontal = "-"
-separator_vertical = ""
+separator_horizontal = "—"
+separator_vertical = "│"
 tab_width = 1
 time_format = "%a, %d %b %Y %T"
 window_auto_zoom = off
 window_separator_horizontal = on
 window_separator_vertical = on
 window_title = "WeeChat ${info:version}"
+word_chars_highlight = "!\u00A0,-,_,|,alnum"
+word_chars_input = "!\u00A0,-,_,|,alnum"
 
 [palette]
 
