--- a/.weechat/irc.conf
+++ b/.weechat/irc.conf
@@ -1,5 +1,5 @@
 #
-# irc.conf -- weechat v1.2-dev
+# weechat -- irc.conf
 #
 
 [look]
@@ -12,7 +12,7 @@ color_nicks_in_nicklist = on
 color_nicks_in_server_messages = on
 color_pv_nick_like_channel = on
 ctcp_time_format = "%a, %d %b %Y %T %z"
-display_away = local
+display_away = off
 display_ctcp_blocked = on
 display_ctcp_reply = on
 display_ctcp_unknown = on
@@ -152,11 +152,11 @@ esper.addresses = "ipv6.irc.esper.net/6697"
 esper.proxy
 esper.ipv6
 esper.ssl = on
-esper.ssl_cert = "%h/ssl/esper.pem"
+esper.ssl_cert
 esper.ssl_priorities
 esper.ssl_dhkey_size = 1024
 esper.ssl_fingerprint
-esper.ssl_verify = off
+esper.ssl_verify = on
 esper.password
 esper.capabilities = ""
 esper.sasl_mechanism = plain
@@ -168,10 +168,11 @@ esper.sasl_fail
 esper.autoconnect = on
 esper.autoreconnect
 esper.autoreconnect_delay
-esper.nicks = "Weethus,zarthus,zarthus-"
+esper.nicks = "Elysia,Weethus,zarthus,zarthus-"
 esper.username
 esper.realname = "Zarthus"
-esper.local_hostname
+esper.local_hostname = ""
+esper.command = ""
 esper.command_delay
 esper.autojoin = "#zarthus,#lobby,#coders,#help,#minecraft,#hearthstone,#KSPOfficial,#drtshock"
 esper.autorejoin
@@ -189,7 +190,7 @@ freenode.addresses = "irc.freenode.net/6697"
 freenode.proxy
 freenode.ipv6
 freenode.ssl = on
-freenode.ssl_cert = "%h/ssl/freenode.pem"
+freenode.ssl_cert
 freenode.ssl_priorities
 freenode.ssl_dhkey_size = 1024
 freenode.ssl_fingerprint
@@ -205,13 +206,13 @@ freenode.sasl_fail
 freenode.autoconnect = on
 freenode.autoreconnect
 freenode.autoreconnect_delay
-freenode.nicks = "Weethus,zarthus,zarthus-"
+freenode.nicks = "Elysia,Weethus,zarthus,zarthus-"
 freenode.username
 freenode.realname = "Zarthus"
-freenode.local_hostname
+freenode.local_hostname = ""
 freenode.command = "/umode +w"
 freenode.command_delay
-freenode.autojoin = "#freenode,#weechat,##c++,#laravel,#ubuntu,#znc,#web,##English,##php,##java"
+freenode.autojoin = "#freenode,#weechat,##c++,#laravel,#ubuntu,#znc,#web,##English,##php,##java,#novaember,#fnalerts,#steamdb"
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
@@ -243,11 +244,11 @@ quakenet.sasl_fail
 quakenet.autoconnect = on
 quakenet.autoreconnect
 quakenet.autoreconnect_delay
-quakenet.nicks = "Weethus,zarthus,zarthus-vps,zarthus-"
+quakenet.nicks = "Elysia,Weethus,zarthus,zarthus-vps,zarthus-"
 quakenet.username
-quakenet.realname = "It's laughter and lovin' I disdain"
+quakenet.realname = "Zarthus"
 quakenet.local_hostname
-quakenet.command = "/challengeauth BuuGhost ${sec.data.quakenet}; /umode +x"
+quakenet.command = "/msg Q@cserve.quakenet.org AUTH BuuGhost ${sec.data.quakenet}; /umode +x"
 quakenet.command_delay
 quakenet.autojoin = "#hearthstone,#r/globaloffensive,#heroesofthestorm"
 quakenet.autorejoin
