--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -19,7 +19,7 @@
 
 [core]
     pager        = less -R
-    excludesfile = /home/jahrens/.config/gitignore
+    excludesfile = ~/.config/gitignore
     autocrlf     = false
 
 [branch]
