--- a/dotfiles/.config/i3/config
+++ b/dotfiles/.config/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font inconsolata:DejaVu Sans Mono:pango:monospace 9
+font pango:FontAwesome:monospace 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -39,7 +39,7 @@ bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec --no-startup-id rofi -show drun -modi drun
-bindsym $mod+shift+d exec dmenu_run
+bindsym $mod+shift+d exec j4-dmenu-desktop
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
@@ -155,9 +155,9 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-# bar {
-#        status_command i3blocks
-#}
+bar {
+        status_command i3blocks
+}
 
 ### Custom
 # Pulse Audio controls
@@ -189,7 +189,7 @@ exec --no-startup-id xautolock -locker "i3lock -I 15 -c 333333 -e -f" -time 30
 exec --no-startup-id dunst
 exec --no-startup-id /home/jahrens/Software/Dropbox/dropboxd
 exec --no-startup-id bash /home/jahrens/.setup/work.sh
-exec --no-startup-id $HOME/.config/polybar/launch.sh
+# exec --no-startup-id $HOME/.config/polybar/launch.sh
 
 exec --no-startup-id i3-msg 'workspace 1; exec gnome-terminal'
 exec --no-startup-id i3-msg 'rename workspace 2 to 7'
