--- a/dotfiles/.config/i3blocks/config
+++ b/dotfiles/.config/i3blocks/config
@@ -27,6 +27,7 @@
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
 command=/usr/local/libexec/i3blocks/$BLOCK_NAME
+separator=true
 separator_block_width=15
 markup=none
 
@@ -55,10 +56,10 @@ signal=1
 [memory]
 label=MEM
 separator=false
-interval=30
+interval=10
 
 [memory]
-label=SWAP
+label=SWP
 instance=swap
 separator=true
 interval=30
@@ -85,7 +86,7 @@ interval=60
 separator=true
 
 [iface]
-label=W:
+label=
 instance=wlp3s0
 interval=120
 separator=true
