--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -1,7 +1,3 @@
-[user]
-    name = Jos Ahrens
-#   email = fixme
-
 [color]
     diff        = auto
     status      = auto
@@ -36,17 +32,20 @@
     df = diff
     dc = diff --cached
     amend = commit --amend
+    tags = tag -l
+    remotes = remote -v
 
     log-full = log --decorate --stat --graph --pretty=format:\"%d %Cgreen%h%Creset (%ar - %Cred%an%Creset), %s%n\"
     serve = daemon --reuseaddr --verbose  --base-path=. --export-all ./.git
     whois = "!sh -c 'git log -i -1 --pretty=\"format:%an <%ae>\n\" --author=\"$1\"' -"
     whatis = show -s --pretty='tformat:%h (%s, %ad)' --date=short
     changelog = !sh -c 'git log --pretty=format:\"* %h %B\" $1..HEAD | sort -k 3' -
-    tags = !sh -c 'git tag | sort -V'
     t = tag -l
     a = add -A .
     l = log
     dsf = "!f() { [ -z \"$GIT_PREFIX\" ] || cd \"$GIT_PREFIX\" && git diff --color \"$@\" | diff-so-fancy  | less --tabs=4 -RFX; }; f"
+
+    please = git push --force-with-lease
 
 [color "diff-highlight"]
     oldNormal = red
