--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -45,7 +45,7 @@
     l = log
     dsf = "!f() { [ -z \"$GIT_PREFIX\" ] || cd \"$GIT_PREFIX\" && git diff --color \"$@\" | diff-so-fancy  | less --tabs=4 -RFX; }; f"
 
-    please = git push --force-with-lease
+    please = push --force-with-lease
 
 [color "diff-highlight"]
     oldNormal = red
