--- a/etc/skel/.editorconfig
+++ b/etc/skel/.editorconfig
@@ -1,6 +1,6 @@
 root = true
 
-[*]
+[{*.php, *.rb, *.py}]
 charset = utf-8
 indent_style = space
 indent_size = 4
@@ -8,5 +8,5 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.md]
+[{*.md, *.mdown, *.markdown}]
 trim_trailing_whitespace = false
